crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-time-and-types.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;06.",
        "corpus": "corpus",
        "custom_field": "custom field",
        "education": "graduate",
        "group": "TD",
        "language": [
          "eng"
        ],
        "role": "Child",
        "ses": "UC",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "ses": "White,MC",
        "sex": "female",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "start": "8:30:31",
        "type": "time_start"
      },
      "line_type": "header"
    },
    {
      "header": {
        "duration": "17:30-18:00",
        "type": "time_duration"
      },
      "line_type": "header"
    },
    {
      "header": {
        "activity": "toyplay",
        "design": "long",
        "group": "TD",
        "type": "types"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Time, type, and option headers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: time_start_header, time_duration_header, time_duration_contents,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "types_header, types_design, types_activity, types_group,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "options_header, options_contents, option_name,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "id_corpus, id_age, id_sex, id_group, id_ses, id_education, id_custom_field",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "look",
              "content": [
                {
                  "content": "look",
                  "type": "text"
                }
              ],
              "raw_text": "look",
              "type": "word"
            },
            {
              "cleaned_text": "at",
              "content": [
                {
                  "content": "at",
                  "type": "text"
                }
              ],
              "raw_text": "at",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "doggy",
              "content": [
                {
                  "content": "doggy",
                  "type": "text"
                }
              ],
              "raw_text": "doggy",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "yes",
              "content": [
                {
                  "content": "yes",
                  "type": "text"
                }
              ],
              "raw_text": "yes",
              "type": "word"
            },
            {
              "cleaned_text": "he",
              "content": [
                {
                  "content": "he",
                  "type": "text"
                }
              ],
              "raw_text": "he",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "nice",
              "content": [
                {
                  "content": "nice",
                  "type": "text"
                }
              ],
              "raw_text": "nice",
              "type": "word"
            },
            {
              "cleaned_text": "doggy",
              "content": [
                {
                  "content": "doggy",
                  "type": "text"
                }
              ],
              "raw_text": "doggy",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [
    "CA"
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;06.",
        "corpus": "corpus",
        "custom_field": "custom field",
        "education": "graduate",
        "group": "TD",
        "language": [
          "eng"
        ],
        "role": "Child",
        "ses": "UC",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "ses": "White,MC",
        "sex": "female",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
