crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng",
          "deu"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.02",
        "corpus": "bates",
        "education": "bleah",
        "group": "normal",
        "language": "eng, deu",
        "role": "Child",
        "ses": "UC",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng, deu",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "28-JUN-2001",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "participant": "CHI",
        "place": "Taipei, Taiwan",
        "type": "birthplace"
      },
      "line_type": "header"
    },
    {
      "header": {
        "language": "ara",
        "participant": "CHI",
        "type": "l1_of"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "headers",
        "media_type": "video",
        "status": "unlinked",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Test all headers FAKE_WORD = ({ALNUM} | [\\_\\@\\&~\\;\\-\\!\\?\\.\\,\\'\\\"\\+\\<\\>\\(\\)\\/\\=\\~\\*\\#\\`\\\\\\%\\^\\$] | {TAG_CHAR})+",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "span": {
                "end": 413,
                "start": 410
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "location": "foo",
        "type": "location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "number": "2",
        "type": "number"
      },
      "line_type": "header"
    },
    {
      "header": {
        "quality": "Quality4",
        "type": "recording_quality"
      },
      "line_type": "header"
    },
    {
      "header": {
        "layout": "foo",
        "type": "room_layout"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "foo",
        "type": "tape_location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "duration": "8:30:31",
        "type": "time_duration"
      },
      "line_type": "header"
    },
    {
      "header": {
        "start": "8:30:31",
        "type": "time_start"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcriber": "foo",
        "type": "transcriber"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcription": "eye_dialect",
        "type": "transcription"
      },
      "line_type": "header"
    },
    {
      "header": {
        "text": "foo",
        "type": "warning"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "span": {
                "end": 616,
                "start": 613
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "activities": "foo",
        "type": "activities"
      },
      "line_type": "header"
    },
    {
      "header": {
        "bck": "foo",
        "type": "bck"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": null,
        "type": "begin_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "foo",
        "type": "begin_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "blank"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "foo",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "28-JUL-2001",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": null,
        "type": "end_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "foo",
        "type": "end_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "foo",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "new_episode"
      },
      "line_type": "header"
    },
    {
      "header": {
        "text": "foo",
        "type": "situation"
      },
      "line_type": "header"
    },
    {
      "header": {
        "page": "42",
        "type": "page"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "28-JUN-2001",
      "code": "CHI",
      "id": {
        "age": "1;08.02",
        "corpus": "bates",
        "education": "bleah",
        "group": "normal",
        "language": "eng, deu",
        "role": "Child",
        "ses": "UC",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng, deu",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
